--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +16,7 @@ input[type=text], input[type=password] {
 }
 
 button {
-  background-color: red;
+  background-color: gray;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -47,6 +47,8 @@ img.avatar {
 
 .container {
   padding: 16px;
+  width: 40%;
+  margin: 0 auto;
 }
 
 span.psw {
@@ -68,11 +70,11 @@ span.psw {
 </head>
 <body>
 
-<h2>Login Form</h2>
+<h2><center>Login Form</h2>
 
 <form action="/action_page.php" method="post">
   <div class="imgcontainer">
-    <img src="img_avatar2.png" alt="Avatar" class="avatar">
+    
   </div>
 
   <div class="container">
@@ -90,6 +92,8 @@ span.psw {
 
   <div class="container" style="background-color:#blue">
     <button type="button" class="cancelbtn">Cancel</button>
+    <a href="registration.html" class="registrationbtn">Register account</a>
+
     <span class="psw">Forgot <a href="#">password?</a></span>
   </div>
 </form>
